site/styles.css
* {
  box-sizing: border-box;
}

html, body {
  overflow-x: hidden;
  max-width: 100%;
}

body {
  font-size: 18px;
  color: #333;
  font-family: 'AvenirLTPro-Book', sans-serif;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

main {
  display: flex;
  flex-wrap: wrap;
  padding-top: 2rem;
  min-height: 100vh;
  position: relative;
}

footer {
  background: #f2f2f2;
  width: 100%;
  padding-top: 3.05555555556em;
  padding-bottom: 1.2222222222em;
}

li{
  margin-bottom: 10px;
}

.hidden {
  display: none;
}

.sr-only {
  border: 0;
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
}

.content-open {
  position: fixed;
  overflow: hidden;
}

#backdrop {
  max-width: 100%;
  max-height: 100%;
}

.backdrop-wrapper {
  width: 100vw;
  height: 50vh;
}

a {
  text-decoration: none;
  color: #333;
  position: relative;
  border: 0;
  border-bottom: 1px solid #bbb;
  display: inline-block;
  line-height: .8;
  transition: border-bottom-color .3s;
}

a:active, a:visited {
  color: #333;
}

a:hover{
  border-bottom: 1px solid currentColor;
}

h1, h2 {
  /*-webkit-font-smoothing: subpixel-antialiased;
  -moz-osx-font-smoothing: auto;*/
}

p {
  margin: 0;
  line-height: 1.44444444444em;
}

ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.header, .nav {
  padding: 2rem 4rem 1rem;
}

.header {
  width: auto;
  display: flex;
  flex-grow: 10;
  justify-content: flex-end;
  align-items: top;
  padding-right: 0;
  font-size: 18px;
  font-weight: normal;
}

#logo {
  width: 150px;
  position: absolute;
  left: 60px;
  top: 49px;
  -webkit-animation: fadein 2s;
     -moz-animation: fadein 2s;
      -ms-animation: fadein 2s;
       -o-animation: fadein 2s;
          animation: fadein 2s;
}

@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

.header__date {
  font-weight: 500;
  font-size: 2em;
  line-height: 32px;
  position: relative;
  top: 9px;
}

.nav {
  width: 260px;
  padding-left: 2em;
}

.nav__signup {
  display: inline-block;
  height: 2.5em;
  line-height: 29px;
  width: 9em;
  padding: 0.5em;
  text-align: center;
  background-color: rgb(144,18,239);
  color: #fff;
  text-decoration: none;
  border-radius: 3px;
  align-self: center;
  margin-right: 0px;
  flex-shrink: 0;
  border-bottom: none !important;
  transition: opacity 100ms;
}

.nav__signup:active, .nav__signup:visited  {
  color: #fff;
}

.nav__signup:hover{
  opacity: 0.7;
}

.summary {
  position: absolute;
  top: 135px;
  right: 0;
  width: 100%;
  padding: 0 4rem;
}

.summary__list{
  float: right;
}

.summary__list li {
  float: left;
  margin-right: 2em;
}

.summary__list li:last-child {
  margin-right: 0;
}

.information, .information-sponsors {
  display: flex;
  flex-wrap: wrap;
  padding: 0 4rem;
  justify-content: space-between;
}

.what, .why {
  width: 30%;
}

.who, .contact, .extras {
  width: 15%;
}

.sponsors-platinum { width: 15%; }
.sponsors-gold { width: 32%; }
.sponsors-silver { width: 31.2%; }
.sponsors-about { width: 15%; }

.sponsor-forsale {
  font-size: 14px;
}

.information__block h2 {
  margin-bottom: 0.5em;
  font-family: 'AvenirLTPro-Medium', sans-serif;
  font-weight: normal;
  font-size: 1.3em;
}

.information__block h3 {
  margin-bottom: 0.5em;
  margin-top: 3em;
  font-family: 'AvenirLTPro-Medium', sans-serif;
  font-weight: normal;
  font-size: 1.0em;
}

.information-sponsors .information__block h3 {
  margin-top: 0px;
}


.information__block p {
  margin-bottom: 1em;
}

.content__page .information__block p {
  hyphens: auto;
}

.information__block p:last-of-type {
  margin-bottom: 0;
}

.morespacebro{
  margin-bottom: 1.5em !important;
}

.information__block.contact ul {
  margin-bottom: 1.5em;
}

.information__block.contact ul:last-child {
  margin-bottom: 0;
}

.information__block.contact li {
  margin-bottom: 8px;
}

.who__list-item {
  margin-bottom: 1em;
}

.who__list-item:nth-child(3){
  margin-bottom: 2em;
}

.who__list a {
  margin: 12px 0 0 0;
  word-wrap:break-word;
  clear: both;
}

.who__avatar {
  float: left;
  width: 2em;
  height: 2em;
  margin-right: 1em;
  border-radius: 50%;
  position: relative;
  display: block;
  flex-shrink: 0;
}

.who__avatar img {
  width: 100%;
  border-radius: 50%;
}

.who__avatar:before {
  position: absolute;
  width: 100%;
  height: 100%;
  content: '';
  display: block;
  background-color: rgba(144, 18, 239, 0.15);
  border-radius: 50%;
}

.shape {
  transform-origin: center center;
}

.overlay {
  z-index: -9;
  opacity: 0;
  display: block;
  transition: opacity .2s ease-in-out;
}

.overlay.open {
  display: block;
  background: white;
  opacity: 0.7;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  transition: opacity .2s ease-in-out;
}

.content__page {
  display: none;
  width: 40.5em;
  margin: 90px auto;
  min-height: 100vh;
  position: absolute;
  top: 0;
  left: calc(50% - 20.25em);
  z-index: 2;
}

.content__menu-wrapper {
  display: flex;
  justify-content: space-between;
  position: absolute;
  top: -50px;
  width: 100%;
}

.content__menu {
  display: flex;
}

.content__menu-close::after{
  content: '';
  display: block;
  position: absolute;
  right: 0;
  top: 0;
  width: 11px;
  height: 11px;
  background-image: url('./images/ELM_close_icon.svg');
}

.content__menu-item, .content__menu-close {
  width: 70px;
  color: #333 !important;
  border-bottom: none;
}

.content__menu-item:hover, .content__menu-close:hover{
  border-bottom: none;
}

.content__menu-item{
  transition: all 300ms ease;
}


.menu-item-active:nth-child(1)::before{
  content: '';
  display: block;
  width: 6px;
  height: 6px;
  background: #333;
  position: absolute;
  top: 135%;
  left: 30%;
}

.menu-item-active:nth-child(2)::before{
  content: '';
  display: block;
  width: 6px;
  height: 6px;
  background: #333;
  position: absolute;
  top: 135%;
  left: 26%;
}
/* ... */

